--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "@babel/preset-env": "^7.0.0-beta.38",
     "@babel/register": "^7.0.0-beta.38"
   },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "cross-env": "^5.1.3",
+    "mocha": "^5.0.0",
+    "sinon": "^4.2.0",
+    "sinon-chai": "^2.14.0"
+  },
   "scripts": {
-    "compile": "babel --out-dir build lib"
+    "compile": "babel --out-dir build lib",
+    "test": "cross-env NODE_ENV=test mocha -r @babel/register spec/spec_helper.js 'spec/**/*.js'"
   }
 }
