--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "cross-env": "^5.1.3",
+    "eslint": "^4.16.0",
+    "eslint-config-optimum-energy": "^0.3.0",
     "mocha": "^5.0.0",
     "sinon": "^4.2.0",
     "sinon-chai": "^2.14.0"
   },
   "scripts": {
     "compile": "babel --out-dir build lib",
+    "lint": "eslint --max-warnings 0 .",
     "test": "cross-env NODE_ENV=test mocha -r @babel/register spec/spec_helper.js 'spec/**/*.js'"
   }
 }
