Define the CLI interface
We added yargs and defined what the interface for the function will look
like.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/core": "^7.0.0-beta.38",
     "@babel/node": "^7.0.0-beta.38",
     "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/register": "^7.0.0-beta.38"
+    "@babel/register": "^7.0.0-beta.38",
+    "yargs": "^10.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -26,6 +27,7 @@
   "scripts": {
     "compile": "babel --out-dir build lib",
     "lint": "eslint --max-warnings 0 .",
-    "test": "cross-env NODE_ENV=test mocha -r @babel/register spec/spec_helper.js 'spec/**/*.js'"
+    "test": "cross-env NODE_ENV=test mocha -r @babel/register spec/spec_helper.js 'spec/**/*.js'",
+    "migrate": "babel-node lib/index.js"
   }
 }
