--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/node": "^7.0.0-beta.38",
     "@babel/preset-env": "^7.0.0-beta.38",
     "@babel/register": "^7.0.0-beta.38",
+    "glob": "^7.1.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "pg": "^7.4.1",
