--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.38",
     "@babel/preset-env": "^7.0.0-beta.38",
     "@babel/register": "^7.0.0-beta.38",
+    "chalk": "^2.3.0",
     "glob": "^7.1.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "pg": "^7.4.1",
-    "winston": "^3.0.0-rc1",
     "yargs": "^10.1.1"
   },
   "devDependencies": {
