--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": [ "@babel/preset-env" ],
+  "presets": [
+    [ "@babel/preset-env", { "targets": { "node": "current" } } ]
+  ],
   "plugins": [ "@babel/plugin-syntax-object-rest-spread" ]
 }
