--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^4.16.0",
     "eslint-config-optimum-energy": "^0.3.0",
     "mocha": "^5.0.0",
+    "proxyquire": "^1.8.0",
     "sinon": "^4.2.0",
     "sinon-chai": "^2.14.0",
     "source-map-support": "^0.5.3"
