--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "beagle",
+  "name": "@optimumenergyco/beagle",
   "version": "0.0.1",
-  "description": "A Postgres database migration CLI tool",
+  "description": "The friendly database migration tool",
   "main": "build/index.js",
   "repository": "https://github.com/optimumenergyco/beagle",
   "author": "Landon Schropp <schroppl@gmail.com>",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@babel/cli": "^7.0.0-beta.38",
     "@babel/core": "^7.0.0-beta.38",
@@ -37,5 +38,8 @@
     "lint": "eslint --max-warnings 0 .",
     "test": "cross-env NODE_ENV=test mocha -r @babel/register spec/spec_helper.js 'spec/**/*.js'",
     "beagle": "babel-node lib/index.js"
+  },
+  "bin": {
+    "beagle": "./build/index.js"
   }
 }
