--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Landon Schropp <schroppl@gmail.com>",
   "license": "MIT",
   "private": false,
+  "files": [ "build" ],
   "dependencies": {
     "@babel/cli": "^7.0.0-beta.38",
     "@babel/core": "^7.0.0-beta.38",
