--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@optimumenergyco/beagle",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "The friendly database migration tool",
   "main": "build/index.js",
   "repository": "https://github.com/optimumenergyco/beagle",
   "author": "Landon Schropp <schroppl@gmail.com>",
   "license": "MIT",
   "private": false,
-  "files": [ "build" ],
+  "files": [
+    "build"
+  ],
   "dependencies": {
     "@babel/cli": "^7.0.0-beta.38",
     "@babel/core": "^7.0.0-beta.38",
