Set the target build to Node 6
Node 6 is the LTS version of Node.js until April 2019. This is necessary
to support AWS Lambda.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Landon Schropp <schroppl@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": { "node": ">= 6" },
   "files": [
     "build"
   ],
