--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    [ "@babel/preset-env", { "targets": { "node": "current" } } ]
+    [ "@babel/preset-env", { "targets": { "node": "6" } } ]
   ],
   "plugins": [ "@babel/plugin-syntax-object-rest-spread" ]
 }
