--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "yargs": "^10.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.38",
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/node": "^7.0.0-beta.38",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/register": "^7.0.0-beta.38",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0-beta.49",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "eslint": "^4.16.0",
