--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -9,3 +9,8 @@
       name: Test
       service: beagle
       command: yarn test
+-
+  name: deploy-to-npm
+  service: koa-utilities
+  command: bin/publish
+  tag: master
